# project-2603AIcourse

./: .env  .env.example  .gitignore  README.md  pyproject.toml  run.py  实验命令.txt  运行命令.txt
docs/: Deepseek分集实验详细分析报告_20260325.md  Deepseek第1轮整体模式实验详细分析报告_20260325.md  Deepseek第2轮整体实验结果详细分析报告_20260325.md  GPT第3轮最终整体实验详细分析报告_20260325.md  ORLIB_8测试集特性与调参分析.md  代码交接全景解析_20260326.md  成本.md  探索与精修两阶段专项解析_20260326.md
runs/final/: Final_40组实验综合分析报告_20260326.md  seed_reports_aggregate.csv  seed_reports_aggregate.json  seed_reports_aggregate.md
runs/final/1 ds-chat/260326013656_ds-chat_seed42/: best_expression.txt  comparison_table.csv  comparison_table.md  metrics.json  seed_reports.json  seed_reports.md  status.json  summary.json  summary.md
runs/final/1 ds-chat/260326030020_ds-chat_seed43/: best_expression.txt  comparison_table.csv  comparison_table.md  metrics.json  seed_reports.json  seed_reports.md  status.json  summary.json  (+1 more)
scripts/: generate_final_seed_reports.py  generate_suite_analysis.py  refresh_per_source_outputs_pct.py  refresh_run_outputs_x100.py  run_ds_or_s_diverse.cmd  run_ds_or_s_diverse.ps1  run_three_seeds.cmd  run_three_seeds.ps1
src/funsearch_lite/: __init__.py  cli.py  compare.py  config.py  datasets.py  dedup.py  evaluator.py  evolution.py  experiment.py  heuristic_expr.py  llm_client.py  summarize.py  visualize.py
src/funsearch_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py
作业要求/: .env  CS5491_Project_Proposal-260213-2020.txt  ChatGPT API Key.txt  brief.md  test_your_api_key.py
(+2301 files in other folders)
